--- a/Marvel App/Components/SortButton.xib
+++ b/Marvel App/Components/SortButton.xib
@@ -8,35 +8,38 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchView" customModule="Marvel_App" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SortButton" customModule="Marvel_App" customModuleProvider="target">
             <connections>
-                <outlet property="contentView" destination="iN0-l3-epB" id="rBT-Ph-zEw"/>
-                <outlet property="searchBar" destination="Wvi-ax-4xk" id="sls-z7-qfp"/>
+                <outlet property="contentView" destination="iN0-l3-epB" id="ZPk-Gg-mgX"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="top" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <searchBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wvi-ax-4xk">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                    <textInputTraits key="textInputTraits"/>
-                </searchBar>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nX5-WP-6h0">
+                    <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="Iex-iI-VNz"/>
+                        <constraint firstAttribute="width" constant="44" id="p2l-PK-q1Y"/>
+                    </constraints>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" image="list.bullet" catalog="system"/>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="Wvi-ax-4xk" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="7OJ-Go-Y86"/>
-                <constraint firstItem="Wvi-ax-4xk" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="OcR-uP-7ZL"/>
-                <constraint firstAttribute="trailing" secondItem="Wvi-ax-4xk" secondAttribute="trailing" id="ZR6-4M-g5e"/>
-                <constraint firstItem="Wvi-ax-4xk" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="eeh-in-Cxu"/>
+                <constraint firstItem="nX5-WP-6h0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Lw6-BY-7vC"/>
+                <constraint firstItem="nX5-WP-6h0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="vFE-Aj-IN1"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="131.8840579710145" y="-169.41964285714286"/>
+            <point key="canvasLocation" x="132" y="80"/>
         </view>
     </objects>
     <resources>
+        <image name="list.bullet" catalog="system" width="128" height="88"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
