--- a/Marvel App/MainViewController.xib
+++ b/Marvel App/MainViewController.xib
@@ -28,28 +28,28 @@
                                     <navigationItem title="Characters" id="9eG-SZ-TGQ"/>
                                 </items>
                             </navigationBar>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cMq-SJ-lcD">
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cMq-SJ-lcD">
                                 <rect key="frame" x="0.0" y="88" width="414" height="44"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g02-Q5-JLs">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g02-Q5-JLs" customClass="SearchView" customModule="Marvel_App" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="274" height="44"/>
                                         <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CIU-eg-Kld" userLabel="botao1">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CIU-eg-Kld" userLabel="botao1" customClass="UpdateListButton" customModule="Marvel_App" customModuleProvider="target">
                                         <rect key="frame" x="274" y="0.0" width="44" height="44"/>
                                         <color key="backgroundColor" systemColor="systemBlueColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="44" id="nw5-Er-cxg"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lai-lu-aCE" userLabel="botao2">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lai-lu-aCE" userLabel="botao2" customClass="ChangeViewButton" customModule="Marvel_App" customModuleProvider="target">
                                         <rect key="frame" x="318" y="0.0" width="44" height="44"/>
                                         <color key="backgroundColor" systemColor="systemPinkColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="44" id="A40-n7-LfW"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HrY-r6-DLj" userLabel="botao3">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HrY-r6-DLj" userLabel="botao3" customClass="SortButton" customModule="Marvel_App" customModuleProvider="target">
                                         <rect key="frame" x="362" y="0.0" width="44" height="44"/>
                                         <color key="backgroundColor" systemColor="systemBrownColor"/>
                                         <constraints>
