--- a/Marvel App/Components/CharactersCollectionView.xib
+++ b/Marvel App/Components/CharactersCollectionView.xib
@@ -4,14 +4,13 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CollectionView" customModule="Marvel_App" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CharactersCollectionView" customModule="Marvel_App" customModuleProvider="target">
             <connections>
-                <outlet property="collectionView" destination="U1R-X8-C6r" id="dce-N0-lcG"/>
-                <outlet property="contentView" destination="iN0-l3-epB" id="fiq-Xj-NFx"/>
+                <outlet property="collectionView" destination="U1R-X8-C6r" id="zF6-oO-MLe"/>
+                <outlet property="contentView" destination="iN0-l3-epB" id="5pd-ME-Bsn"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -21,7 +20,6 @@
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="U1R-X8-C6r">
                     <rect key="frame" x="0.0" y="44" width="586" height="818"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Hvs-v1-gGU">
                         <size key="itemSize" width="128" height="128"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -31,7 +29,6 @@
                 </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="U1R-X8-C6r" secondAttribute="bottom" id="AYn-4e-k07"/>
                 <constraint firstItem="U1R-X8-C6r" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="dLw-IB-zz3"/>
@@ -42,9 +39,4 @@
             <point key="canvasLocation" x="184.05797101449278" y="79.6875"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
