--- a/Marvel App/Components/CollectionViewCell.xib
+++ b/Marvel App/Components/CollectionViewCell.xib
@@ -38,6 +38,7 @@
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <color key="backgroundColor" red="0.25098039215686274" green="0.25098039215686274" blue="0.25098039215686274" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
                 <constraint firstItem="71N-mY-kYG" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="0Ud-67-J7e"/>
                 <constraint firstAttribute="trailing" secondItem="O2q-8c-X8v" secondAttribute="trailing" constant="8" id="AVP-sQ-1Gm"/>
