--- a/Marvel App/Components/SearchView.xib
+++ b/Marvel App/Components/SearchView.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,13 +18,12 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <searchBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wvi-ax-4xk">
+                <searchBar contentMode="scaleToFill" placeholder="placeholder" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wvi-ax-4xk">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                     <textInputTraits key="textInputTraits"/>
                 </searchBar>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="Wvi-ax-4xk" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="7OJ-Go-Y86"/>
                 <constraint firstItem="Wvi-ax-4xk" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="OcR-uP-7ZL"/>
@@ -36,9 +34,4 @@
             <point key="canvasLocation" x="131.8840579710145" y="-169.41964285714286"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
